--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "stylelint": "^13.13.0",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-declaration-use-variable": "^1.7.3",
     "typescript": "~4.1.5"
   },
   "gitHooks": {
@@ -38,6 +41,10 @@
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
       "vue-cli-service lint",
+      "git add"
+    ],
+    "*.scss": [
+      "npx stylelint \"**/*.scss\" --fix",
       "git add"
     ]
   }
